--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <style>
     ::-webkit-scrollbar{
-      display: none;
+      display: none
     }
   </style>
 
@@ -36,4 +36,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
