--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <style>
     ::-webkit-scrollbar{
-      display: none
+      display: none;
     }
   </style>
 
@@ -38,3 +38,4 @@
 </body>
 
 </html>
+
